Fix spacing of officwr flags on users list

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -32,6 +32,7 @@ table#users {
   svg {
   	width: 3em;
   	height: 2em;
+  	margin: 0 auto;
   }
 
   tr.gray {
